Quiz App 0.1 - Web Dev

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Quiz Game</title>
 </head>
 <body>
+
+    <h1 style="color: white; text-align: center;" >Quiz App Versão Web Dev 0.1<br>
+        Tela verde indica alternativa correta<br>
+        Tela vermelha indica alternativa falsa<br>
+        As questões estão em ordem sortida<br>
+    </h1>
     <div class="container">
         <div id="question-container" class="hide">
             <div id="question">Question</div>
