mudanças na descrição do app

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <h1 style="color: white; text-align: center;" >Quiz App Versão Web Dev 0.1<br>
+    <h1>Quiz App Versão Web Dev 0.1<br>
         Tela verde indica alternativa correta<br>
         Tela vermelha indica alternativa falsa<br>
         As questões estão em ordem sortida<br>
